@@ -10,6 +10,7 @@ import avi.mod.skrim.skills.Skills;
 import avi.mod.skrim.utils.Obfuscation;
 import avi.mod.skrim.utils.Utils;
 import avi.mod.skrim.world.PlayerPlacedBlocks;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import net.minecraft.block.*;
 import net.minecraft.block.state.IBlockState;
@@ -37,7 +38,28 @@ public class SkillBotany extends Skill implements ISkillBotany {
   public static SkillStorage<ISkillBotany> skillStorage = new SkillStorage<>();
   public static Set<Item> GLOW_FLOWER_ITEMS = new HashSet<>();
   public static Set<Item> ENCHANTED_FLOWER_ITEMS = new HashSet<>();
-  private static Map<String, Integer> XP_MAP;
+
+  // The chart for flower rarity is at: http://minecraft.gamepedia.com/Flower
+  private static Map<String, Integer> XP_MAP = ImmutableMap.<String, Integer>builder()
+      .put("dandelion", 300)
+      .put("poppy", 300)
+       // 3 Biomes
+      .put("houstonia", 600) // azure_bluet
+      .put("red_tulip", 600)
+      .put("orange_tulip", 600)
+      .put("white_tulip", 600)
+      .put("pink_tulip", 600)
+      .put("oxeye_daisy", 600)
+       // Only swamp, can respawn
+      .put("blue_orchid", 1200)
+      .put("allium", 1200)
+       // Only forest & flower forest on generation
+      .put("syringa", 3000) // lilac
+      .put("double_rose", 3000)
+      .put("paeonia", 3000) // peony
+       // Only sunflower plains on generation
+      .put("sunflower", 5000)
+      .build();
 
   private static SkillAbility SUN_FLOWER = new SkillAbility("botany", "Sun Flower", 25, "It was either this or " +
       "mariglow, don't know which one is worse.",
@@ -53,29 +75,6 @@ public class SkillBotany extends Skill implements ISkillBotany {
       "Enables you to craft enchanted flowers that function like speed beacons.");
   private static Set<String> DOUBLE_FLOWER_NAMES = ImmutableSet.of("azure_bluet", "lilac", "peony", "rose_bush",
       "double_rose");
-
-  static {
-    XP_MAP = new HashMap<>();
-    // The chart for flower rarity is at: http://minecraft.gamepedia.com/Flower
-    XP_MAP.put("dandelion", 300);
-    XP_MAP.put("poppy", 300);
-    // 3 Biomes
-    XP_MAP.put("houstonia", 600); // azure_bluet
-    XP_MAP.put("red_tulip", 600);
-    XP_MAP.put("orange_tulip", 600);
-    XP_MAP.put("white_tulip", 600);
-    XP_MAP.put("pink_tulip", 600);
-    XP_MAP.put("oxeye_daisy", 600);
-    // Only swamp, can respawn
-    XP_MAP.put("blue_orchid", 1200);
-    XP_MAP.put("allium", 1200);
-    // Only forest & flower forest on generation
-    XP_MAP.put("syringa", 3000); // lilac
-    XP_MAP.put("double_rose", 3000);
-    XP_MAP.put("paeonia", 3000); // peony
-    // Only sunflower plains on generation
-    XP_MAP.put("sunflower", 5000);
-  }
 
   public SkillBotany() {
     this(1, 0);
@@ -127,6 +126,8 @@ public class SkillBotany extends Skill implements ISkillBotany {
       // of fortune drops here if necessary.
       if (targetState.getBlock() instanceof BlockDoublePlant) {
         flowerName = getFlowerName(targetState);
+        if (!XP_MAP.containsKey(flowerName)) return;
+        
         if (Utils.rand.nextDouble() < botany.getFortuneChance()) {
           Item droppedItem = targetState.getBlock().getItemDropped(targetState, Utils.rand, 0);
           int meta = targetState.getBlock().damageDropped(targetState);
